--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 
 <html>
 <body>
-<p> Click <a href ="C.V_SIMPHIWE_MAGAGULA.pdf">Here</a> to view Simphiwe Magagula's Curriculum Vitae
+<p> Click <a href ="C.V_SIMPHIWE_MAGAGULA.pdf">Here</a> to view Simphiwe Magagula's. Curriculum Vitae
 </body>
 </html>
